plugins {
	id 'net.fabricmc.fabric-loom' version "${loom_version}"
	id 'maven-publish'
}

version = project.mod_version
group = project.maven_group

loom {
	accessWidenerPath = file("src/main/resources/metallum.accesswidener")
}

repositories {
	maven { url = "https://api.modrinth.com/maven" }
}

// Optional developer-only bridge for running a built Vitrail Fabric jar in Metallum's Loom client.
// Nothing is added to a normal build or run unless the property is supplied explicitly.
def vitrailSmokeJar = providers.gradleProperty("vitrailSmokeJar")

dependencies {
	minecraft "com.mojang:minecraft:${project.minecraft_version}"
	
	implementation "net.fabricmc:fabric-loader:${project.loader_version}"
	implementation "maven.modrinth:sodium:${project.sodium_version}"

	if (vitrailSmokeJar.isPresent()) {
		localRuntime files(vitrailSmokeJar.get())
		localRuntime "net.fabricmc.fabric-api:fabric-key-mapping-api-v1:2.0.5+e2bdee789e"
		localRuntime "net.fabricmc.fabric-api:fabric-lifecycle-events-v1:4.1.4+29b6eb019e"
	}
}

// Extra JVM arguments for the client run, from a Gradle property. The performance harness sets one
// -Dvitrail.* or -Dmetallum.* switch per run so that two runs of one scene can be compared, and
// nothing is added to a normal run unless the property is supplied explicitly.
def vitrailPerfVmArgs = providers.gradleProperty("vitrailPerfVmArgs")

loom {
	runs {
		client {
			if (vitrailSmokeJar.isPresent()) {
				property("vitrail.experimentalMetal", "true")
			}

			// macOS's own Metal Performance HUD, on for a hand-run dev client, so the frame can be watched
			// while it is being drawn instead of inferred from a log afterwards: it reads frames a second,
			// the GPU time of the frame the card really ran, the device, and the scaler's own metrics when
			// MetalFX is on. Off for a measured one - `-PvitrailHud=0`, which is what the performance
			// harness passes - because the picture a measurement compares is a screenshot, and an overlay
			// whose numbers and graph change every frame is most of what differs between two arms: measured,
			// 3.39 per cent of pixels above eight levels between two runs that were otherwise identical.
			// The ambient `MTL_HUD_ENABLED` wins where there is one; the environment the Gradle daemon was
			// started with is not the one the game runs in, so that is for a hand run rather than a harness.
			def metalHud = providers.gradleProperty("vitrailHud")
					.getOrElse(System.getenv("MTL_HUD_ENABLED") ?: "1")
			environmentVariable("MTL_HUD_ENABLED", metalHud)

			if (vitrailPerfVmArgs.isPresent()) {
				vitrailPerfVmArgs.get().split("\\s+").each { argument ->
					if (!argument.isEmpty()) {
						vmArg argument
					}
				}
			}
		}
	}
}

processResources {
	inputs.property "version", project.version

	filesMatching("fabric.mod.json") {
		expand "version": inputs.properties.version
	}
}

tasks.withType(JavaCompile).configureEach {
	it.options.release = 25
}

java {
	withSourcesJar()

	sourceCompatibility = JavaVersion.VERSION_25
	targetCompatibility = JavaVersion.VERSION_25
}

jar {
	inputs.property "projectName", project.name

	from("LICENSE") {
		rename { "${it}_${project.name}"}
	}
}

// configure the maven publication
publishing {
	publications {
		create("mavenJava", MavenPublication) {
			from components.java
		}
	}

	// See https://docs.gradle.org/current/userguide/publishing_maven.html for information on how to set up publishing.
	repositories {
		// Add repositories to publish to here.
		// Notice: This block does NOT have the same function as the block in the top level.
		// The repositories here are used for publishing your artifact, not for retrieving dependencies.
	}
}
